--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html {
+  @apply bg-white;
+  @apply text-black/75;
+  @apply transition-colors;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html.dark {
+  @apply bg-black/90;
+  @apply text-white;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.text-stroke {
+  color: transparent !important;
+  -webkit-text-stroke: 1px currentcolor;
+  letter-spacing: 1px;
+  word-spacing: 12px;
 }
